@@ -10,11 +10,12 @@ package org.elasticsearch.snapshots;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.lucene.util.LuceneTestCase;
+import org.apache.lucene.tests.util.LuceneTestCase;
 import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ShardOperationFailedException;
 import org.elasticsearch.action.StepListener;
+import org.elasticsearch.action.admin.cluster.health.ClusterHealthRequestBuilder;
 import org.elasticsearch.action.admin.cluster.health.ClusterHealthResponse;
 import org.elasticsearch.action.admin.cluster.node.hotthreads.NodeHotThreads;
 import org.elasticsearch.action.admin.cluster.snapshots.create.CreateSnapshotRequestBuilder;
@@ -86,7 +87,7 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
     }
 
     private static Set<String> nodeNames(ImmutableOpenMap<String, DiscoveryNode> nodesMap) {
-        return nodesMap.stream().map(c -> c.getValue().getName()).collect(Collectors.toSet());
+        return nodesMap.values().stream().map(DiscoveryNode::getName).collect(Collectors.toSet());
     }
 
     /**
@@ -210,7 +211,7 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
         private final ThreadPool threadPool = new TestThreadPool(
             "TrackedCluster",
             // a single thread for "client" activities, to limit the number of activities all starting at once
-            new ScalingExecutorBuilder(CLIENT, 1, 1, TimeValue.ZERO, CLIENT)
+            new ScalingExecutorBuilder(CLIENT, 1, 1, TimeValue.ZERO, true, CLIENT)
         );
 
         private final AtomicBoolean shouldStop = new AtomicBoolean();
@@ -574,13 +575,8 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
                             snapshotInfo.snapshotId().getName()
                         );
 
-                        client().admin()
-                            .cluster()
-                            .prepareHealth(indicesToRestore)
-                            .setWaitForEvents(Priority.LANGUID)
-                            .setWaitForGreenStatus()
+                        prepareClusterHealthRequest(indicesToRestore).setWaitForGreenStatus()
                             .setWaitForNoInitializingShards(true)
-                            .setWaitForNodes(Integer.toString(internalCluster().getNodeNames().length))
                             .execute(mustSucceed(clusterHealthResponse -> {
 
                                 logger.info(
@@ -874,13 +870,7 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
                         snapshotName
                     );
 
-                    client().admin()
-                        .cluster()
-                        .prepareHealth(targetIndexNames.toArray(new String[0]))
-                        .setWaitForEvents(Priority.LANGUID)
-                        .setWaitForYellowStatus()
-                        .setWaitForNodes(Integer.toString(internalCluster().getNodeNames().length))
-                        .execute(ensureYellowStep);
+                    prepareClusterHealthRequest(targetIndexNames.toArray(String[]::new)).setWaitForYellowStatus().execute(ensureYellowStep);
 
                     ensureYellowStep.addListener(mustSucceed(clusterHealthResponse -> {
                         assertFalse("timed out waiting for yellow state of " + targetIndexNames, clusterHealthResponse.isTimedOut());
@@ -1153,7 +1143,7 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
             // the snapshot already exists).
 
             // TODO generalise this so that it succeeds as soon as it's acquired a permit on >1/2 of the master-eligible nodes
-            final List<TrackedNode> masterNodes = shuffledNodes.stream().filter(TrackedNode::isMasterNode).collect(Collectors.toList());
+            final List<TrackedNode> masterNodes = shuffledNodes.stream().filter(TrackedNode::isMasterNode).toList();
             try (TransferableReleasables localReleasables = new TransferableReleasables()) {
                 for (TrackedNode trackedNode : masterNodes) {
                     if (localReleasables.add(tryAcquirePermit(trackedNode.getPermits())) == null) {
@@ -1341,13 +1331,7 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
 
                             logger.info("--> waiting for yellow health of [{}] prior to indexing [{}] docs", indexName, docCount);
 
-                            client().admin()
-                                .cluster()
-                                .prepareHealth(indexName)
-                                .setWaitForEvents(Priority.LANGUID)
-                                .setWaitForYellowStatus()
-                                .setWaitForNodes(Integer.toString(internalCluster().getNodeNames().length))
-                                .execute(ensureYellowStep);
+                            prepareClusterHealthRequest(indexName).setWaitForYellowStatus().execute(ensureYellowStep);
 
                             final StepListener<BulkResponse> bulkStep = new StepListener<>();
 
@@ -1412,6 +1396,17 @@ public class SnapshotStressTestsIT extends AbstractSnapshotIntegTestCase {
 
         }
 
+    }
+
+    // Prepares a health request with twice the default (30s) timeout that waits for all cluster tasks to finish as well as all cluster
+    // nodes before returning
+    private static ClusterHealthRequestBuilder prepareClusterHealthRequest(String... targetIndexNames) {
+        return client().admin()
+            .cluster()
+            .prepareHealth(targetIndexNames)
+            .setTimeout(TimeValue.timeValueSeconds(60))
+            .setWaitForNodes(Integer.toString(internalCluster().getNodeNames().length))
+            .setWaitForEvents(Priority.LANGUID);
     }
 
     private static String stringFromSnapshotInfo(SnapshotInfo snapshotInfo) {
