@@ -19,12 +19,12 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
 
 public class PluginInfoTests extends ESTestCase {
 
@@ -43,13 +43,16 @@ public class PluginInfoTests extends ESTestCase {
             "java.version",
             System.getProperty("java.specification.version"),
             "classname",
-            "FakePlugin"
+            "FakePlugin",
+            "modulename",
+            "org.mymodule"
         );
         PluginInfo info = PluginInfo.readFromProperties(pluginDir);
         assertEquals("my_plugin", info.getName());
         assertEquals("fake desc", info.getDescription());
         assertEquals("1.0", info.getVersion());
         assertEquals("FakePlugin", info.getClassname());
+        assertEquals("org.mymodule", info.getModuleName().orElseThrow());
         assertThat(info.getExtendedPlugins(), empty());
     }
 
@@ -81,6 +84,23 @@ public class PluginInfoTests extends ESTestCase {
     public void testReadFromPropertiesElasticsearchVersionMissing() throws Exception {
         Path pluginDir = createTempDir().resolve("fake-plugin");
         PluginTestUtil.writePluginProperties(pluginDir, "description", "fake desc", "name", "my_plugin", "version", "1.0");
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> PluginInfo.readFromProperties(pluginDir));
+        assertThat(e.getMessage(), containsString("[elasticsearch.version] is missing"));
+    }
+
+    public void testReadFromPropertiesElasticsearchVersionEmpty() throws Exception {
+        Path pluginDir = createTempDir().resolve("fake-plugin");
+        PluginTestUtil.writePluginProperties(
+            pluginDir,
+            "description",
+            "fake desc",
+            "name",
+            "my_plugin",
+            "version",
+            "1.0",
+            "elasticsearch.version",
+            "  "
+        );
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> PluginInfo.readFromProperties(pluginDir));
         assertThat(e.getMessage(), containsString("[elasticsearch.version] is missing"));
     }
@@ -120,14 +140,8 @@ public class PluginInfoTests extends ESTestCase {
             "version",
             "1.0"
         );
-        IllegalStateException e = expectThrows(IllegalStateException.class, () -> PluginInfo.readFromProperties(pluginDir));
-        assertThat(
-            e.getMessage(),
-            equalTo(
-                "version string must be a sequence of nonnegative decimal integers separated"
-                    + " by \".\"'s and may have leading zeros but was 1.7.0_80"
-            )
-        );
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> PluginInfo.readFromProperties(pluginDir));
+        assertThat(e.getMessage(), equalTo("Invalid version string: '1.7.0_80'"));
     }
 
     public void testReadFromPropertiesBogusElasticsearchVersion() throws Exception {
@@ -164,6 +178,52 @@ public class PluginInfoTests extends ESTestCase {
         );
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> PluginInfo.readFromProperties(pluginDir));
         assertThat(e.getMessage(), containsString("property [classname] is missing"));
+    }
+
+    public void testReadFromPropertiesModulenameFallback() throws Exception {
+        Path pluginDir = createTempDir().resolve("fake-plugin");
+        PluginTestUtil.writePluginProperties(
+            pluginDir,
+            "description",
+            "fake desc",
+            "name",
+            "my_plugin",
+            "version",
+            "1.0",
+            "elasticsearch.version",
+            Version.CURRENT.toString(),
+            "java.version",
+            System.getProperty("java.specification.version"),
+            "classname",
+            "FakePlugin"
+        );
+        PluginInfo info = PluginInfo.readFromProperties(pluginDir);
+        assertThat(info.getModuleName().isPresent(), is(false));
+        assertThat(info.getExtendedPlugins(), empty());
+    }
+
+    public void testReadFromPropertiesModulenameEmpty() throws Exception {
+        Path pluginDir = createTempDir().resolve("fake-plugin");
+        PluginTestUtil.writePluginProperties(
+            pluginDir,
+            "description",
+            "fake desc",
+            "name",
+            "my_plugin",
+            "version",
+            "1.0",
+            "elasticsearch.version",
+            Version.CURRENT.toString(),
+            "java.version",
+            System.getProperty("java.specification.version"),
+            "classname",
+            "FakePlugin",
+            "modulename",
+            " "
+        );
+        PluginInfo info = PluginInfo.readFromProperties(pluginDir);
+        assertThat(info.getModuleName().isPresent(), is(false));
+        assertThat(info.getExtendedPlugins(), empty());
     }
 
     public void testExtendedPluginsSingleExtension() throws Exception {
@@ -243,6 +303,7 @@ public class PluginInfoTests extends ESTestCase {
             Version.CURRENT,
             "1.8",
             "dummyclass",
+            null,
             Collections.singletonList("foo"),
             randomBoolean(),
             PluginType.ISOLATED,
@@ -255,7 +316,29 @@ public class PluginInfoTests extends ESTestCase {
         ByteBufferStreamInput input = new ByteBufferStreamInput(buffer);
         PluginInfo info2 = new PluginInfo(input);
         assertThat(info2.toString(), equalTo(info.toString()));
+    }
 
+    public void testSerializeWithModuleName() throws Exception {
+        PluginInfo info = new PluginInfo(
+            "c",
+            "foo",
+            "dummy",
+            Version.CURRENT,
+            "1.8",
+            "dummyclass",
+            "some.module",
+            Collections.singletonList("foo"),
+            randomBoolean(),
+            PluginType.ISOLATED,
+            "-Dfoo=bar",
+            randomBoolean()
+        );
+        BytesStreamOutput output = new BytesStreamOutput();
+        info.writeTo(output);
+        ByteBuffer buffer = ByteBuffer.wrap(output.bytes().toBytesRef().bytes);
+        ByteBufferStreamInput input = new ByteBufferStreamInput(buffer);
+        PluginInfo info2 = new PluginInfo(input);
+        assertThat(info2.toString(), equalTo(info.toString()));
     }
 
     public void testPluginListSorted() {
@@ -268,6 +351,7 @@ public class PluginInfoTests extends ESTestCase {
                 Version.CURRENT,
                 "1.8",
                 "dummyclass",
+                null,
                 Collections.emptyList(),
                 randomBoolean(),
                 PluginType.ISOLATED,
@@ -283,6 +367,7 @@ public class PluginInfoTests extends ESTestCase {
                 Version.CURRENT,
                 "1.8",
                 "dummyclass",
+                null,
                 Collections.emptyList(),
                 randomBoolean(),
                 PluginType.BOOTSTRAP,
@@ -298,6 +383,7 @@ public class PluginInfoTests extends ESTestCase {
                 Version.CURRENT,
                 "1.8",
                 "dummyclass",
+                null,
                 Collections.emptyList(),
                 randomBoolean(),
                 PluginType.ISOLATED,
@@ -313,6 +399,7 @@ public class PluginInfoTests extends ESTestCase {
                 Version.CURRENT,
                 "1.8",
                 "dummyclass",
+                null,
                 Collections.emptyList(),
                 randomBoolean(),
                 PluginType.BOOTSTRAP,
@@ -328,6 +415,7 @@ public class PluginInfoTests extends ESTestCase {
                 Version.CURRENT,
                 "1.8",
                 "dummyclass",
+                null,
                 Collections.emptyList(),
                 randomBoolean(),
                 PluginType.ISOLATED,
@@ -338,7 +426,7 @@ public class PluginInfoTests extends ESTestCase {
         PluginsAndModules pluginsInfo = new PluginsAndModules(plugins, Collections.emptyList());
 
         final List<PluginInfo> infos = pluginsInfo.getPluginInfos();
-        List<String> names = infos.stream().map(PluginInfo::getName).collect(Collectors.toList());
+        List<String> names = infos.stream().map(PluginInfo::getName).toList();
         assertThat(names, contains("a", "b", "c", "d", "e"));
     }
 
